backend/A/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m

spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:       
          - path: /api/query/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-query
                port:
                  number: 3000
          - path: /api/slave/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-slave-0
                port:
                  number: 3000
          - path: /api/hunter/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-hunter
                port:
                  number: 3001
